--- a/playground/core/index.html
+++ b/playground/core/index.html
@@ -1,56 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Swiper Playground</title>
+    <link rel="stylesheet" href="../../build/swiper-bundle.css" />
+    <meta name="viewport" content="width=device-width" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Swiper Playground</title>
-  <link rel="stylesheet" href="../../build/swiper-bundle.css">
-  <meta name="viewport" content="width=device-width">
-</head>
-
-<body>
-  <section class="swiper-container">
-    <div class="swiper-scrollbar"></div>
-    <button class="swiper-button-prev"></button>
-    <button class="swiper-button-next"></button>
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      <div class="swiper-slide">Slide 4</div>
-      <div class="swiper-slide">Slide 5</div>
-      <div class="swiper-slide">Slide 6</div>
-      <div class="swiper-slide">Slide 7</div>
-      <div class="swiper-slide">Slide 8</div>
-      <div class="swiper-slide">Slide 9</div>
-      <div class="swiper-slide">Slide 10</div>
+  <body>
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide" style="background-image: url(./images/nature-1.jpg)"></div>
+        <div class="swiper-slide" style="background-image: url(./images/nature-2.jpg)"></div>
+        <div class="swiper-slide" style="background-image: url(./images/nature-3.jpg)"></div>
+        <div class="swiper-slide" style="background-image: url(./images/nature-4.jpg)"></div>
+        <div class="swiper-slide" style="background-image: url(./images/nature-5.jpg)"></div>
+        <div class="swiper-slide" style="background-image: url(./images/nature-6.jpg)"></div>
+        <div class="swiper-slide" style="background-image: url(./images/nature-7.jpg)"></div>
+        <div class="swiper-slide" style="background-image: url(./images/nature-8.jpg)"></div>
+        <div class="swiper-slide" style="background-image: url(./images/nature-9.jpg)"></div>
+        <div class="swiper-slide" style="background-image: url(./images/nature-10.jpg)"></div>
+      </div>
+      <!-- Add Pagination -->
+      <div class="swiper-pagination"></div>
     </div>
-    <div class="swiper-pagination"></div>
-  </section>
-  <style>
-    body,
-    html {
-      padding: 0;
-      margin: 0;
-      position: relative;
-      height: 100%;
-    }
+    <style>
+      body {
+        background: #fff;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        padding: 0;
+      }
 
-    .swiper-container {
-      width: 100%;
-      height: 300px;
-      margin: 50px auto;
-    }
+      .swiper-container-coverflow .swiper-container {
+        width: 100%;
+        height: 300px;
+        padding: 0;
+      }
 
-    .swiper-slide {
-      background: #f1f1f1;
-      color: #000;
-      text-align: center;
-      line-height: 300px;
-    }
-  </style>
-  <script type="module" src="./main.js"></script>
+      .swiper-container-coverflow .swiper-wrapper {
+        width: 300px;
+        margin: 20px auto 150px;
+      }
 
-</body>
-
+      .swiper-container-coverflow .swiper-slide {
+        background-position: center;
+        background-size: cover;
+        width: 300px;
+        height: 300px;
+        transform-origin: center 2300px;
+      }
+    </style>
+    <script type="module" src="./main.js"></script>
+  </body>
 </html>
